chore: update swagger docs
